# Color-Tree

./: .flake8  .gitignore  .pre-commit-config.yaml  CREATIVE_CHORDS_GUIDE.md  Dockerfile  FEATURE_SUMMARY.md  INTERVALS_DOCS.md  Procfile  README.md  TECHNICAL_DOCS.md  app.json  chord_generator.py  cli_example.py  config.py  config_example.py  creative_chord_window.py  creative_usage_example.py  docker-compose.yml  example_usage.py  install_dependencies.py  integration_example.py  intervals_demo.py  manifest.yml  pattern_engine.py  pyproject.toml  pytest.ini  real_world_example.py  requirements.txt  run.py  setup.py  test_arpeggio_loop.py  test_audio_improved.py  test_audio_simple.py  test_chord_generator.py  test_creative_patterns.py  test_gui_creative.py  test_intervals.py  test_midi.py  test_midi_dropdown.py  test_midi_fixed.py  (+3 more)
.github/workflows/: ci.yml
